--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <a href="#">
+    <a class="logo" href="#">
         <h1>Zenote.</h1>
     </a>
     <!-- main content -->
