changed nav links

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div id="myModal" class="modal">
         <!-- Modal Content -->
         <div class="modal-content">
-            <span class="close">X</span>
+            <p class="close">X</p>
             <!-- <h1>Enter New Post</h1> -->
             <div class="new-post-form">
                 <form action="#" class="modal-form" name="myForm" method="get" onsubmit="return false">
                     <fieldset class="fieldset">
                         <legend>
-                            Note Creation
+                            - Note Creation -
                         </legend>
                         <label>
                             Title:
@@ -58,14 +58,17 @@
             </div>
         </div>
     </div>
+
+    <!-- Logo -->
     <a class="logo" href="#">
         <h1>Zenote.</h1>
     </a>
+
     <!-- main content -->
          <div class="links">
             <ul>
                 <a href="#">blog</a>
-               <a href="#">write-ups</a>
+                <a href="#">discord</a>
                 <a href="#">contact</a>
             </ul>
          </div>
