fixed the issue that was deleting the posts when x is pressed during editing post

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <form action="#" class="modal-form" name="myForm" method="get" onsubmit="return false">
                     <fieldset class="fieldset">
                         <legend>
-                            - Note Creation -
+                            Note Creation
                         </legend>
                         <label>
                             Title:
