moved x on firefox to the right

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 
         </div><!-- end post -->        
       </div><!-- end container -->
+      <footer>
+        
+      </footer>
 </body>
 </html>
 
