got form Validation, zenote must have a title!

--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
                         <legend>
                             Note Creation
                         </legend>
+                        <!-- Title -->
                         <label>
-            
-                            <input type="text" name="title" class="title-input" placeholder="Enter note title..." size="35" max-length="100" required ></input>
+                            <input type="text" name="title" class="title-input" placeholder="Enter note title..." size="35" max-length="100" required />
                         </label>
                         <br />
+
+                        <!-- Subject -->
                         <label>
-    
-                            <Input type="text" name="subject" class="subject-input" placeholder="Subject goes here, followed by commas." size="35" max-length="100"></Input>
+                            <input type="text" name="subject" class="subject-input" placeholder="Subject goes here, followed by commas." size="35" max-length="100" />
                         </label>
                         <br />
+
+                        <!-- Body Text -->
                         <label>
                             <textarea class="modal-text-box" name="textarea" id="text" placeholder="This is where the main body text goes..." required ></textarea>
                         </label>
