added discord font-awesome logo to nav, which links to the project on github.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <a href="#">blog</a>
                 <a href="#">discord</a>
                 <a href="#">contact</a>
+                <a href="https://github.com/chrisjonesdesign85/zenote"><i class="fa-brands fa-github"></i></a>
             </ul>
          </div>
     </nav>
@@ -74,7 +75,7 @@
 
     <div class="quote-div">
         <p>
-            “The mind of the beginner is empty, free of the habits of the expert, ready to accept, to doubt, and open to all the possibilities.” – Shunryu Suzuki
+            “The mind of the beginner is empty, free of the habits of the expert, ready to accept, to doubt, and open to all the possibilities.” - Shunryu Suzuki
         </p>
     </div>
 
