fade out animation when note gets deleted

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- My JS file -->
     <script defer src="app.js"></script>
+
+    <!-- My Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Zenote 1.0 2023</title>
 </head>
@@ -66,7 +72,7 @@
                 <a href="#">blog</a>
                 <a href="#">discord</a>
                 <a href="#">contact</a>
-                <a href="https://github.com/chrisjonesdesign85/zenote"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/chrisjonesdesign85/zenote" target="about:blank"><i class="fa-brands fa-github"></i></a>
             </ul>
          </div>
     </nav>
@@ -114,6 +120,10 @@
       <footer>
         
       </footer>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
 
