fixed the X on modal

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                 <a href="#">blog</a>
                 <a href="#">discord</a>
                 <a href="#">contact</a>
-                <a href="https://github.com/chrisjonesdesign85/zenote" target="about:blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/chrisjonesdesign85/zenote" 
+                    target="about:blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
             </ul>
          </div>
     </nav>
