fixed 0 on total notes counter

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          <div class="links">
              <!-- trigger/open the modal button -->
         <button id="new-post">New Post</button>
-        <h6>You have <span class="storageNumber"></span> notes</h6>
+        <h6><span class="storageNumber">0</span> total notes</h6>
 
             <a href="https://github.com/chrisjonesdesign85/zenote" 
                     target="about:blank">
