--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="links">
         <div>
             <!-- trigger/open the modal button -->
-            <button id="new-post">New Post</button>
+            <button id="new-post">New Note</button>
             
             <a href="https://github.com/chrisjonesdesign85/zenote" target="about:blank">
                 <i class="fa-brands fa-github"></i>
