fixed dummy text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 
                 <p> Created on
                     <span class="date">Wednesday, January 11, 2023</span> by
-                    <span class="author">Chris</span>
+                    <span class="author">User</span>
                 </p>
 
             </div><!-- end post-info -->
